samples/_failures_safe/1761150541_afb96d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cfc7b887.c: In function ‘decreaseKey’:
./samples/SAFE/__tmp_cfc7b887.c:145:42: error: expected ‘]’ at end of input
  145 |         minHeap->positions[minHeap->array
      |                                          ^
      |                                          ]
./samples/SAFE/__tmp_cfc7b887.c:145:27: error: array subscript is not an integer
  145 |         minHeap->positions[minHeap->array
      |                           ^
./samples/SAFE/__tmp_cfc7b887.c:145:9: error: expected declaration or statement at end of input
  145 |         minHeap->positions[minHeap->array
      |         ^~~~~~~
./samples/SAFE/__tmp_cfc7b887.c:145:9: error: expected declaration or statement at end of input
